# mt_tenant

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  GOOGLETEST_INTEGRATION_SUMMARY.md  PRODUCT.md  README.md  TESTING.md  YaoBase_MultiTenant_Presentation.pptx  build.ps1  compile.bat  config.ini  install_dependencies.ps1  多租户资源隔离概要设计.html
.github/skills/write_design/: SKILL.md
docs/: ARCHITECTURE_OVERVIEW.md  IMPROVEMENT_RECOMMENDATIONS.md
src/: main.cpp
src/common/config/: ConfigManager.cpp  ConfigManager.h
src/common/utils/: Exceptions.h  RequestContext.cpp  RequestContext.h
src/core/resource/: BasicResourceStats.cpp  BasicResourceStats.h  CgroupController.cpp  CgroupController.h  CpuMonitor.cpp  CpuMonitor.h  CpuQuotaChecker.cpp  CpuQuotaChecker.h  CpuResourceManager.cpp  CpuResourceManager.h  DiskQuotaChecker.cpp  DiskQuotaChecker.h  DiskResourceManager.cpp  DiskResourceManager.h  LockFreeQueue.cpp  LockFreeQueue.h  MemoryQuotaChecker.cpp  MemoryQuotaChecker.h  MemoryResourceManager.cpp  MemoryResourceManager.h  ResourceStats.h  TenantAuthenticator.cpp  TenantAuthenticator.h  TenantThreadGroup.cpp  TenantThreadGroup.h  ThreadPoolManager.cpp  ThreadPoolManager.h
src/core/tenant/: TenantContext.cpp  TenantContext.h  TenantManager.cpp  TenantManager.h
src/server/admin/: AdminServer.cpp  AdminServer.h
src/server/data/: DataServer.cpp  DataServer.h
src/server/sql/: ConnectionManager.cpp  ConnectionManager.h  SqlServer.cpp  SqlServer.h
src/server/trans/: TransServer.cpp  TransServer.h
tests/: CMakeLists.txt
tests/integration/: ResourceIsolationTest.cpp  ServerIntegrationTest.cpp
tests/unit/: BasicResourceStatsTest.cpp  ConfigManagerTest.cpp  CpuQuotaCheckerTest.cpp  CpuResourceManagerTest.cpp  DiskQuotaCheckerTest.cpp  DiskResourceManagerTest.cpp  MemoryQuotaCheckerTest.cpp  MemoryResourceManagerTest.cpp  RequestContextTest.cpp  TenantAuthenticatorTest.cpp  TenantContextTest.cpp  TenantManagerTest.cpp
